--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <!-- <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> -->
-    <title>Portfolio - Frontend</title>
+    <link rel="shortcut icon" href="/LogoV" type="image/x-icon">
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <title>Portfolio - Andrea Linza</title>
   </head>
   <body>
     <div id="app"></div>
